Bug 514095 - With default "Never save [non-text] in history" option, copying an image and clicking on top-most text item in history doesn't let the text be pasted into text fields
Summary: With default "Never save [non-text] in history" option, copying an image and ...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Clipboard widget & pop-up (other bugs)
Version First Reported In: 6.5.4
Platform: Other Linux
: HI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2026-01-03 02:51 UTC by solomoncyj
Modified: 2026-04-21 08:04 UTC (History)
10 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.7.0
Sentry Crash Report:


Attachments
video (830.53 KB, video/mp4)
2026-01-03 02:51 UTC, solomoncyj
Details

Note You need to log in before you can comment on or make changes to this bug.
Description solomoncyj 2026-01-03 02:51:32 UTC
Created attachment 188176 [details]
video

***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports

Please remove this comment after reading and before submitting - thanks!
***

SUMMARY
copied image does not appear in copy history, and clicking on text in clipboad does not push it to clip bload buffer


STEPS TO REPRODUCE
1. copy an image from a site
2. paste image
3. super + v
4.select top most text in history

OBSERVED RESULT
1. image not in history
2.selected text not pushed to clipboard buffer

EXPECTED RESULT
1. image to appear
2.text to be pushed to buffer

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 43
KDE Plasma Version: 6.5.4
KDE Frameworks Version: 6.21.0
Qt Version: 6.10.1
Kernel Version: 6.17.12-300.fc43.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 16 ร— AMD Ryzen 7 8845HS w/ Radeon 780M Graphics
Memory: 32 GiB of RAM (27.2 GiB usable)
Graphics Processor 1: AMD Radeon 780M Graphics
Graphics Processor 2: NVIDIA GeForce RTX 4060 Laptop GPU

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2026-01-03 03:33:42 UTC
Thank you for the bug report!

However Plasma 6.2.5 no longer receives updates or maintenance from KDE; active versions are 6.4 or newer. Please upgrade to an active version as soon as your distribution makes it available to you. Plasma is a fast-moving project, and bugs in one version are often fixed in the next one.

If you need help with Plasma 6.2.5, please contact your distribution, who bears the responsibility of providing help for older releases that are no longer receiving updates from KDE.

If you can reproduce the issue after upgrading to an active version, feel free to re-open this bug report.
Comment 2 argonel 2026-01-03 07:59:24 UTC
Discussed with the user on Matrix, they're on F43 with Plasma 6.5.4.

I can repro on F42. I could not copy the image from https://api.kde.org/kmessagewidget.html#details but can copy an image from Spectacle.
Comment 3 Nate Graham 2026-01-06 22:06:42 UTC
Can affected people re-test with Frameworks 6.22? It included a bunch of clipboard fixes and comes out in 3 days.

Thanks!
Comment 4 solomoncyj 2026-01-17 08:33:29 UTC
framworks 6.22 does not fix the problem unfortunately
Comment 5 Nate Graham 2026-01-22 17:22:52 UTC
Darn. Can you create a new clean user account on the same computer with no customizations and try it again there? Does the issue still reproduce exactly as described in the original bug report?
Comment 6 Bug Janitor Service 2026-02-06 03:50:43 UTC
๐Ÿ›๐Ÿงน โš ๏ธ This bug has been in NEEDSINFO status with no change for at least 15 days. Please provide the requested information, then set the bug status to REPORTED. If there is no change for at least 30 days, it will be automatically closed as RESOLVED WORKSFORME.

For more information about our bug triaging procedures, please read https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging.

Thank you for helping us make KDE software even better for everyone!
Comment 7 Helga 2026-02-12 12:00:10 UTC
Can confirm with a new user:
Operating System: openSUSE Tumbleweed 20260209
KDE Plasma Version: 6.5.5
KDE Frameworks Version: 6.22.0
Qt Version: 6.10.2
Kernel Version: 6.18.9-1-default (64-bit)
Graphics Platform: Wayland
Processors: 16 ร— AMD Ryzen 7 8845HS w/ Radeon 780M Graphics
Memory: 32 GiB of RAM (30.6 GiB usable)
Graphics Processor: AMD Radeon 780M Graphics

Issues still reproduce on 6.22 - images copied from Firefox don't show up in clipboard history, and after that clicking on last clipboard text doesn't result in text being pasted on ctrl-V. This notably doesn't happen if the image is copied from gwenview.
Comment 8 Nate Graham 2026-02-24 18:15:35 UTC
I cannot reproduce your issue, Helga, or the original from solomoncyj. Also, can you upgrade to Plasma 6.6 and see if that helps?

If not, can you also try to reproduce the issue in a new clean user account with no customization and see if it still happens? If it reproduces there, can you write specific detailed steps to reproduce that I can follow? Also mention which version of Firefox you're using, and try in other browsers too, like Chromium or any Firefox forks like LibreWolf (and mention their version numbers too).

Thanks a lot!
Comment 9 solomoncyj 2026-02-25 10:55:12 UTC
huh thats weird. might i ask what's your system?
Comment 10 Helga 2026-02-25 13:15:44 UTC
> I cannot reproduce your issue, Helga, or the original from solomoncyj. Also, can you upgrade to Plasma 6.6 and see if that helps? If not, can you also try to reproduce the issue in a new clean user account with no customization and see if it still happens? 

Upgraded to 6.6, issue still reproduces after I create a clean user. KF 6.23, Plasma 6.6.0

> If it reproduces there, can you write specific detailed steps to reproduce that I can follow? 

1. Copy a piece of text so it shows up in Clipboard widget.
2. Open Google Search in Firefox, search for any topic and click images
3. Select an image so it pops out bigger. Right-click on the big image, and click "Copy Image"
3a. (optional) Paste that image into GIMP to confirm that image was copied successfully
4. Open Clipboard widget. Observe that the image copied from Firefox is not there
5. Click on the text in the widget, so that it's selected to be pasted.
6. Try pasting that text into a text field in Firefox

Observed results:
* Image from Firefox doesn't show up in clipboard
* Nothing gets pasted into the text field

Expected results: 

* Image from Firefox  shows up in clipboard widget in the same way that an image from Gwenview would
* Text selected in clipboard widget gets pasted successfully.

> Also mention which version of Firefox you're using

147.0.4 (64-bit) built by OpenSUSE - in other words, not a flatpak/snap version.

Try in other browsers too, like Chromium or any Firefox forks like LibreWolf (and mention their version numbers too).

Ungoogled Chromium 145.0.7632.116 Flatpak: same behavior on both counts.
Firefox 148.0 Flatpak: same behavior on both counts
Librewolf 148.0-1 Flatpak: same behavior on both counts.
Comment 11 Nate Graham 2026-02-25 17:11:31 UTC
Thanks, Helga. I can reproduce the issue now. It was *I* who was using non-default settings! I had "non-text selection: [save] only when explicitly copied" and not the devalue value of "never save in history".

With default settings, I can now reproduce the issue. With the image secretly on the clipboard but not saved to the history, clicking on the top-most text selection does not move it to the actual first position, so pasting it into a text field fails.

This all works correctly when using  "non-text selection: [save] only when explicitly copied".
Comment 12 Nate Graham 2026-02-25 17:14:04 UTC
TBH I'd remove this setting entirely and always save images and stuff into the history. It would produce multiple benefits:
- Fix this bug
- Make the history view visually complete and accurate
- Simplify the code

However doing this would open up the potential for an increase in memory exhaustion for people who configure massive clipboard histories  and copy copying 4k images all day. But this sounds like an incredibly niche use case and feels like it borders on intentional self-abuse.
Comment 13 Bug Janitor Service 2026-02-27 11:23:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/6356
Comment 14 cwo 2026-04-07 11:09:56 UTC
Git commit 0f6617e89d98bb08bb4fd0a7c96d0ccd4c22669e by Christoph Wolk.
Committed on 07/04/2026 at 10:23.
Pushed by cwo into branch 'master'.

klipper: always set clipboard when moving entry to top

When moving an entry to the top of the history (typically by selecting
it in the klipper applet/popup), it's set as the current history entry -
unless it already is at the top, in which case nothing happens. This
means that if the current clipboard contents are  not saved in the
history (e.g. because it's an image and those are set to be not saved,
as is the default), you can't select the top item to be the clipboard
contents; attempting to do so will fail because it's already at the top.

Instead, always set an entry as the current clipboard contents when
moving it to the top.

M  +2    -1    klipper/historymodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/0f6617e89d98bb08bb4fd0a7c96d0ccd4c22669e
Comment 15 cwo 2026-04-21 08:04:26 UTC
Git commit 2eaa7a2d94e8f03f252b26adf2b62716f96098a0 by Christoph Wolk.
Committed on 21/04/2026 at 07:33.
Pushed by cwo into branch 'Plasma/6.6'.

klipper: always set clipboard when moving entry to top

When moving an entry to the top of the history (typically by selecting
it in the klipper applet/popup), it's set as the current history entry -
unless it already is at the top, in which case nothing happens. This
means that if the current clipboard contents are  not saved in the
history (e.g. because it's an image and those are set to be not saved,
as is the default), you can't select the top item to be the clipboard
contents; attempting to do so will fail because it's already at the top.

Instead, always set an entry as the current clipboard contents when
moving it to the top.


(cherry picked from commit 0f6617e89d98bb08bb4fd0a7c96d0ccd4c22669e)

Co-authored-by: Christoph Wolk <cwo.kde@posteo.net>

M  +2    -1    klipper/historymodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/2eaa7a2d94e8f03f252b26adf2b62716f96098a0