klipper: always set clipboard when moving entry to top

When moving an entry to the top of the history (typically by selecting
it in the klipper applet/popup), it's set as the current history entry -
unless it already is at the top, in which case nothing happens. This
means that if the current clipboard contents are  not saved in the
history (e.g. because it's an image and those are set to be not saved,
as is the default), you can't select the top item to be the clipboard
contents; attempting to do so will fail because it's already at the top.

Instead, always set an entry as the current clipboard contents when
moving it to the top.

BUG: 514095